[package]
name = "simular-core"
version = "0.2.3"
edition = "2021"
authors = ["Dave Bryson <davebryson@users.noreply.github.com>"]
categories = ["ethereum"]
description = "Simple API for interacting with an embedded Ethereum Virtual Machine (EVM)"
documentation = "https://docs.rs/simular-core"
keywords = ["ethereum", "revm", "EVM"]
license = "Apache-2.0"
repository = "https://github.com/simular-fi/simular-core"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.81"
alloy-dyn-abi = "0.7.0"
alloy-json-abi = "0.7.0"
alloy-primitives = "0.7.0"
alloy-sol-types = { version = "0.7.0", features = ["json"] }
hex = { version = "0.4.3", features = ["serde"] }
revm = { version = "8.0.0", default-features = false, features = [
    "tokio",
    "memory_limit",
    "optional_eip3607",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "arbitrary",
] }
serde = "1.0.165"
serde_json = "1.0.99"
thiserror = "1.0.58"

# required for forkdb
tokio = { version = "1.37.0", feature = ["rt-multi-thread", "macros"] }

ethers-core = { version = "2.0.10", default-features = false }
ethers-providers = "2.0.10"
# need this feature in reqwest to deal with potential self-signed certs
reqwest = { version = "0.11.19", features = ["rustls-tls"] }
# resolve build issues on Ubuntu
openssl = { version = "0.10", features = ["vendored"] }


[dev-dependencies]
dotenvy = "0.15.7"
rstest = "0.18.2"
